# revcopy

./: docker-compose.yml
revcopy-admin-main/src/components/: PromptsManagement.tsx
revcopy-admin-main/src/lib/: api.ts
revcopy-admin-main/src/pages/: Login.tsx
revcopy-backend-main/: Dockerfile  pyproject.toml  requirements.txt
revcopy-backend-main/app/: main.py
revcopy-backend-main/app/api/v1/: __init__.py  analysis.py  campaigns.py  products.py
revcopy-backend-main/app/schemas/: prompts.py
revcopy-backend-main/app/services/: ai.py  analysis.py  content_generation.py  product.py
revcopy-backend-main/crawlers/: shopify_crawler.py
revcopy-crawlers-api-main/amazon/: Dockerfile
revcopy-crawlers-api-main/amazon/internal/services/: scraper.go
revcopy-frontend-main/: Dockerfile
revcopy-frontend-main/src/lib/: api.ts
revcopy-frontend-main/src/pages/: Campaigns.tsx
