[tool.poetry]
name = "revcopy-backend"
version = "0.1.0"
description = "RevCopy backend API"
authors = ["Unknown <unknown@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.5.0"
pydantic-settings = "2.1.0"
gunicorn = "21.2.0"
sqlalchemy = {extras = ["asyncio"], version = "2.0.23"}
asyncpg = "0.29.0"
alembic = "1.13.1"
psycopg2-binary = "2.9.9"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
cryptography = "41.0.7"
aiohttp = "3.9.1"
httpx = "0.25.2"
beautifulsoup4 = "4.12.2"
lxml = "4.9.3"
requests = "2.31.0"
openai = "1.3.7"
anthropic = "0.7.7"
tiktoken = "0.5.2"
slowapi = "0.1.9"
limits = "3.6.0"
pandas = "2.1.4"
numpy = "1.24.3"
python-dateutil = "2.8.2"
redis = "5.0.1"
celery = "5.3.4"
kombu = "5.3.4"
structlog = "23.2.0"
prometheus-client = "0.19.0"
py-spy = "0.3.14"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
toml = "0.10.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
black = "23.11.0"
flake8 = "6.1.0"
mypy = "1.7.1"
pre-commit = "3.6.0"
email-validator = "2.1.0"
croniter = "2.0.1"
sentry-sdk = "1.38.0"
watchdog = "3.0.0"
schedule = "1.2.0"
statsd = "4.0.1"
datadog = "0.48.0"
newrelic = "9.2.0"
mkdocs = "1.5.3"
mkdocs-material = "9.4.8"
fastapi-users = "12.1.2"
fastapi-pagination = "0.12.11"
aiosmtplib = "3.0.0"
aiofiles = "23.2.1"
xlsxwriter = "3.1.9"
arq = "0.25.0"
rq = "1.15.1"
click = "8.1.7"
rich = "13.7.0"
typer = "0.9.0"
tqdm = "4.66.1"
scikit-learn = "1.3.2"
transformers = "4.35.2"
torch = "2.1.1"
sentence-transformers = "2.2.2"
nltk = "3.8.1"
spacy = "3.7.2"
langdetect = "1.0.9"
dynaconf = "3.2.4"
slowapi = "0.1.9"
limits = "3.6.0"
jsonschema = "4.20.0"
marshmallow = "3.20.1"
asyncio-mqtt = "0.13.0"
aioredis = "2.0.1"
aiobotocore = "2.8.0"
boto3 = "1.34.0"
google-cloud-storage = "2.10.0"
babel = "2.13.1"
loguru = "0.7.2"
python-json-logger = "2.0.7"
secure = "0.3.0"
python-decouple = "3.8"
cachetools = "5.3.2"
diskcache = "5.6.3"
pymemcache = "4.0.0"
fastapi-versioning = "0.10.0"
yoyo-migrations = "8.2.0"
python-environ = "0.4.54"
arrow = "1.3.0"
pendulum = "2.1.2"
mako = "1.3.0"
PyPDF2 = "3.0.1"
reportlab = "4.0.7"
openpyxl = "3.1.2"
Pillow = "10.1.0"
opencv-python = "4.8.1.78"
imageio = "2.32.0"
flower = "2.0.1"
plotly = "5.17.0"
seaborn = "0.13.0"
matplotlib = "3.8.2"
memory-profiler = "0.61.0"
pympler = "0.9"
bandit = "1.7.5"
safety = "2.3.5"
httpie = "3.2.2"
locust = "2.17.0"
sqlparse = "0.4.4"
pg8000 = "1.30.3"
geoip2 = "4.7.0"
lz4 = "4.3.2"
zstandard = "0.22.0"
msgpack = "1.0.7"
orjson = "3.9.10"
websockets = "12.0"
sse-starlette = "1.6.5"
argon2-cffi = "23.1.0"
scrypt = "0.8.20"
sqlalchemy-pool = "0.7.0"
httptools = "0.6.1"
h11 = "0.14.0"
ipython = "8.17.2"
jupyter = "1.0.0"
pymongo = "4.6.0"
motor = "3.3.2"
django-redis = "5.4.0"
redis-py-cluster = "2.1.3"
apscheduler = "3.10.4"
python-crontab = "3.0.0"
fastapi-utils = "0.2.1"
openapi-spec-validator = "0.7.1"
elasticsearch = "8.11.0"
elasticsearch-dsl = "8.11.0"
alertmanager-webhook-logger = "0.4.0"
python-magic = "0.4.27"
chardet = "5.2.0"
cerberus = "1.3.4"
voluptuous = "0.13.1"
factory-boy = "3.3.0"
faker = "20.1.0"
responses = "0.24.1"
sphinx = "7.2.6"
sphinx-rtd-theme = "1.3.0"
radon = "6.0.1"
xenon = "0.9.1"
line-profiler = "4.1.1"
scalene = "1.5.26"
sqlalchemy-migrate = "0.13.0"
sqlalchemy-utils = "0.41.1"
httpx-oauth = "0.10.2"
authlib = "1.2.1"
pika = "1.3.2"
kombu = "5.3.4"
pydantic-extra-types = "2.2.0"
pydantic-core = "2.14.6"
python-magic-bin = "0.4.14"
pytz = "2023.3.post1"
tzdata = "2023.3"
sentry-sdk = {extras = ["fastapi"], version = "1.38.0"}
rollbar = "0.16.3"
python-docx = "1.1.0"
python-pptx = "0.6.23"
dnspython = "2.4.2"
netaddr = "0.10.1"
wtforms = "3.1.1"
wtforms-validators = "1.1.2"
alembic-utils = "0.8.2"
alembic-postgresql-enum = "1.1.2"
statsd-telegraf = "0.4.0"
py-cpuinfo = "9.0.0"
boto3-stubs = "1.34.0"
botocore-stubs = "1.34.0"
semgrep = "1.48.0"
bandit-sarif-formatter = "1.1.1"
pytest-benchmark = "4.0.0"
py-spy = "0.3.14"
brotli = "1.1.0"
zlib-ng = "0.3.0"
sqlalchemy-continuum = "1.4.0"
sqlalchemy-searchable = "1.5.0"
colorlog = "6.8.0"
termcolor = "2.3.0"
textstat = "0.7.3"
readability = "0.3.1"
yarl = "1.9.3"
multidict = "6.0.4"
celery-progress = "0.2.0"
celery-beat-scheduler = "2.5.0"
pathlib2 = "2.3.7"
scandir = "1.10.0"
cython = "3.0.6"
numba = "0.58.1"
sortedcontainers = "2.4.0"
bidict = "0.22.1"
ftfy = "6.1.1"
unidecode = "1.3.7"
urllib3 = "2.1.0"
certifi = "2023.11.17"
pgbouncer = "1.21.0"
connection-pool = "0.0.3"
dogpile.cache = "1.3.0"
beaker = "1.12.1"
oauthlib = "3.2.2"
cryptography = "41.0.7"
markovify = "0.9.4"
gensim = "4.3.2"
py-cpuinfo = "9.0.0"
psutil = "5.9.6"
hydra-core = "1.3.2"
omegaconf = "2.3.0"
jsonschema = "4.20.0"
schema = "0.7.5"
hypothesis = "6.92.1"
pytest-xdist = "3.5.0"
sqlalchemy-mixins = "2.0.5"
sqlalchemy-serializer = "1.4.1"
prometheus-fastapi-instrumentator = "6.1.0"
opentelemetry-api = "1.21.0"
opentelemetry-sdk = "1.21.0"
opentelemetry-instrumentation-fastapi = "0.42b0"
opentelemetry-exporter-prometheus = "1.12.0rc1"
python-multipart = "0.0.6"
email-validator = "2.1.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
itsdangerous = "2.1.2"
